# retake

./: .gitignore  Makefile  SUMMARY.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: extract_voice_embeddings.yml  generate-tts-10min.yml  generate-tts.yml
data/reference/: TALKING_POINTS.md
data/source/: GMT20251114-025308_Recording.transcript.vtt  GMT20251114-035710_Recording.transcript.vtt
docs/: ACTUAL_STRUCTURE.md  CLEAN_STRUCTURE.md  CURRENT_STATUS.md  DIALOGUE_STRUCTURE.md  FINAL_STATUS.md  FINAL_STRATEGY.md  FISH_SPEECH_SETUP.md  GITHUB_ACTIONS_COMPUTE.md  PROFESSIONAL_REWRITES.md  PROJECT_STRUCTURE.md  READY_FOR_TTS.md  SPRINT.md  STATUS.md  STRUCTURE.md  TTS_FIX.md  TTS_OPTIMIZATION.md  TTS_OPTIONS.md
models/: aaron_voice_embedding.npy  jared_voice_embedding.npy  jules_voice_embedding.npy
output/original/: 10min_professional_script.json  corrected_transcript.json  (+1 more)
scripts/: analyze_speakers.py  batch_generate_tts.py  batch_generate_tts_10min.sh  compare_transcripts.py  create_10min_speaker_scripts.py  create_highly_professional_rewrites.py  create_professional_script.py  download_fish_models.py  download_fish_models_alt.py  extract_speaker_audio.py  extract_voice_models.py  generate_tts.sh  generate_tts_10min.py  prepare_tts_script.py  rewrite_script_professional.py  run.sh  run_pipeline.py  setup_fish_references.py  setup_fish_speech.sh  show_improvements.py  test_cut_segments.py  test_extract.py  test_fish_inference.py  test_fish_tts.py  test_transcript.py  test_video_cut.py  use_original_audio.py
utils/: __init__.py
(+55 files in other folders)
